fix(team): the image bottom spacing issue
The image overlay in the hover state was showing a little bit longer
than the image. Previously I tried to fix this by changing the overlay
position to 3px at the bottom though it is not a good practice. I
found the reason now. The line-height issue again. I changed the
line-height and position bottom to zero.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -253,13 +253,14 @@
       }
       .img-wrap {
         position: relative;
+        line-height: 0;
         .socials {
           visibility: hidden;
           background: rgba(0, 0, 0, 0.6);
           position: absolute;
           top: 0;
           right: 0;
-          bottom: 3px;
+          bottom: 0;
           width: 36.36%;
           display: flex;
           flex-direction: column;
@@ -286,7 +287,7 @@
         }
       }
       &:hover {
-        .img-wrap img {
+        .img-wrap {
           box-shadow: 2px 2px 5px 0 $box-shadow-color,
             -2px -2px 5px 0 $box-shadow-color;
         }
